add task, user, category forms

--- a/templates/task/index.html.twig
+++ b/templates/task/index.html.twig
@@ -14,7 +14,7 @@
 {#    This friendly message is coming from:#}
 {#    <ul>#}
 {#        <li>Your controller at <code><a href="{{ '/home/pikaachiu/Projects/s2part2something/src/Controller/TaskController.php'|file_link(0) }}">src/Controller/TaskController.php</a></code></li>#}
-{#        <li>Your template at <code><a href="{{ '/home/pikaachiu/Projects/s2part2something/templates/task/index.html.twig'|file_link(0) }}">templates/task/index.html.twig</a></code></li>#}
+{#        <li>Your template at <code><a href="{{ '/home/pikaachiu/Projects/s2part2something/templates/task/new.html.twig'|file_link(0) }}">templates/task/new.html.twig</a></code></li>#}
 {#    </ul>#}
 {#</div>#}
 {#{% endblock %}#}
