--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,4 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
+    <form style="width: 30%; margin: 0 auto;">
     {{ form(form) }}
+    </form>
 {% endblock %}
