--- a/templates/boards/show.html.twig
+++ b/templates/boards/show.html.twig
@@ -5,17 +5,18 @@
     <table class="table table-striped table-bordered" style="width: 60%; margin: 0 auto;">
         <tr>
             <th scope="col" style="width: 20%;">category</th>
-            <th scope="col" style="width: 20%;">owner</th>
-            <th scope="col" style="width: 50%;">title</th>
+            <th scope="col" style="width: 10%;">owner</th>
+            <th scope="col" style="width: 60%;">title</th>
             <th scope="col" style="width: 10%;">status</th>
         </tr>
-
         {% for task in tasks %}
-            <tr>
+            <tr class="dropdown">
                 <td>{{ task.category }}</td>
                 <td>{{ task.owner }}</td>
                 <td>{{ task.title }}</td>
                 <td>{{ task.status }}</td>
+
+
             </tr>
         {% endfor %}
     </table>
