--- a/templates/home_page/boards.html.twig
+++ b/templates/home_page/boards.html.twig
@@ -10,7 +10,7 @@
 
         </tr>
         {% for board in boards %}
-            <tr href="/boards/{board.id}">
+            <tr data-href="/boards/{board.id}" style="cursor:pointer;">
                 <td>{{ board.id }}dff</td>
                 <td>{{ board.owner }}dfdfd</td>
                 <td>{{ board.name }}fdfdf</td>
