--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,11 +11,12 @@
                 <a class="nav-item nav-link" href="/create-category">New category</a>
                 <a class="nav-item nav-link" href="/create-task">New task</a>
                 <a class="nav-item nav-link" href="/create-user">New user</a>
-                <a class="nav-item nav-link" href="/create-board">New board</a>
+                <a class="nav-item nav-link " href="/create-board">New board</a>
             </div>
         </div>
 
     </nav>
+
     <title>{% block title %}{% endblock %}</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +24,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
             crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/css/bootstrap-datepicker.css">
+    <link rel="stylesheet"
+          href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/css/bootstrap-datepicker.css">
     {% block stylesheets %}{% endblock %}
 
     {% block javascripts %}{% endblock %}
