--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,6 +1,20 @@
 {% extends 'base.html.twig' %}
 {% block body %}
     <form style="width: 30%; margin: 0 auto;">
-    {{ form(form) }}
+        {{ form(form) }}
     </form>
+
+    <table class="table table-striped table-bordered" style="width: 60%; margin: 0 auto;">
+        <tr>
+            <th scope="col" style="width: 20%;">No</th>
+            <th scope="col" style="width: 80%;">title</th>
+
+        </tr>
+        {% for category in categories %}
+            <td> {{ category.id }} </td>
+            <td>{{ category.name }} </td>
+            </tr>
+        {% endfor %}
+    </table>
+
 {% endblock %}
