--- a/templates/home_page/boards.html.twig
+++ b/templates/home_page/boards.html.twig
@@ -3,7 +3,11 @@
     {% block title %} <h1>{{ users }} Boards </h1> {% endblock %}
 
     <a class="btn btn-primary" href="/create-board" role="button">Add new board</a>
-
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+    {% endfor %}
     <table class="table table-striped table-bordered" style="width: 60%; margin: 0 auto;">
         <tr>
             <th scope="col" style="width: 10%;">No</th>
