--- a/templates/tasks/show.html.twig
+++ b/templates/tasks/show.html.twig
@@ -2,6 +2,11 @@
 {% block body %}
     {% block title %}{% endblock %}
     <a class="btn btn-primary" href="/create-task" role="button">Add new task</a>
+{% for message in app.flashes('success') %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+    {% endfor %}
     <table class="table table-striped table-bordered" style="width: 60%; margin: 0 auto;">
         <tr>
             <th scope="col" style="width: 20%;">id</th>
@@ -9,6 +14,7 @@
             <th scope="col" style="width: 10%;">owner</th>
             <th scope="col" style="width: 60%;">title</th>
             <th scope="col" style="width: 10%;">status</th>
+            <th scope="col" colspan="2" style="width: 10%;">actions</th>
         </tr>
         {% for task in board.tasks %}
             <tr>
@@ -25,6 +31,8 @@
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
                 </div>
+                <td><a href="/delete-task/{{ task.id }}"> delete</a></td>
+                <td><a href="/edit-task/{{ task.id }}"> edit</a></td>
             </tr>
         {% endfor %}
     </table>
