add board editing

--- a/templates/tasks/show.html.twig
+++ b/templates/tasks/show.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    {% block title %}{% endblock %}
+    {% block title %} <h1>{{ board.name }}</h1>{% endblock %}
+    <a class="btn btn-primary" href="/edit-board/{{board.id}}" role="button">Edit board</a>
     <a class="btn btn-primary" href="/create-task" role="button">Add new task</a>
 {% for message in app.flashes('success') %}
         <div class="alert alert-success">
