add task editing and minor css updates

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
 
     {% block javascripts %}{% endblock %}
 </head>
-<body style="background-color: #F5F5F5 ">
+<body style="background-color: #F5F5F5;">
 {% block body %}{% endblock %}
 </body>
 </html>
