--- a/templates/edit_board/show.html.twig
+++ b/templates/edit_board/show.html.twig
@@ -1,4 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-{{ form(form) }}
+    <h1>Board Editing</h1>
+
+    {{ form(form) }}
 {% endblock %}
