--- a/templates/edit_task/edit.html.twig
+++ b/templates/edit_task/edit.html.twig
@@ -5,8 +5,7 @@
             {{ message }}
         </div>
     {% endfor %}
-    <h1>Create New Task</h1>
-
+    <h1>Task Editing</h1>
     <form style="width: 30%; margin: 0 auto;">
         {{ form_start(form) }}
         {# form_row(form.title, {label_attr: {class: 'radio-custom'} }) #}
