--- a/templates/new_board/new.html.twig
+++ b/templates/new_board/new.html.twig
@@ -6,6 +6,7 @@
         </div>
     {% endfor %}
     <form style="width: 30%; margin: 0 auto;">
+        <h1>Create New Board</h1>
         {{ form_start(form) }}
         {# form_row(form.title, {label_attr: {class: 'radio-custom'} }) #}
         {{ form_end(form) }}
