--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,15 +1,18 @@
 {% extends 'base.html.twig' %}
 {% block body %}
+
     {% for message in app.flashes('success') %}
         <div class="alert alert-success">
             {{ message }}
         </div>
     {% endfor %}
+    <h1>Categories</h1>
+
     <form style="width: 30%; margin: 0 auto;">
         {{ form(form) }}
     </form>
 
-    <table class="table table-striped table-bordered" style="width: 60%; margin: 0 auto;">
+    <table class="table table-striped table-bordered" style="width: 30%; margin: 0 auto;">
         <tr>
             <th scope="col" style="width: 20%;">No</th>
             <th scope="col" style="width: 80%;">title</th>
