--- a/templates/tasks/show.html.twig
+++ b/templates/tasks/show.html.twig
@@ -10,11 +10,11 @@
     {% endfor %}
     <table class="table table-striped table-bordered" style="width: 60%; margin: 0 auto;">
         <tr>
-            <th scope="col" style="width: 20%;">id</th>
+            <th scope="col" style="width: 10%;">id</th>
             <th scope="col" style="width: 20%;">category</th>
             <th scope="col" style="width: 10%;">owner</th>
-            <th scope="col" style="width: 60%;">title</th>
-            <th scope="col" style="width: 10%;">status</th>
+            <th scope="col" style="width: 50%;">title</th>
+            <th scope="col" style="width: 30%;">status</th>
             <th scope="col" colspan="2" style="width: 10%;">actions</th>
         </tr>
         {% for task in board.tasks %}
@@ -23,15 +23,7 @@
                 <td>{{ task.category }}</td>
                 <td>{{ task.owner }}</td>
                 <td>{{ task.title }}</td>
-                <div class="dropdown">
-                <td class="dropdown-toggle" id="dropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">{{ task.status }}</td>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-                </div>
+                <td>{{ task.status }}</td>
                 <td><a href="/delete-task/{{ task.id }}"> delete</a></td>
                 <td><a href="/edit-task/{{ task.id }}"> edit</a></td>
             </tr>
