--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block body %}
+    <h1>Create New User</h1>
     <form style="width: 30%; margin: 0 auto;">
         {{ form(form) }}
     </form>
