--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% block title %} Categories {% endblock %}
 {% block body %}
 
     {% for message in app.flashes('success') %}
