--- a/templates/edit_task/edit.html.twig
+++ b/templates/edit_task/edit.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% block title %} Edit task {% endblock %}
 {% block body %}
     {% for message in app.flashes('success') %}
         <div class="alert alert-success">
