--- a/templates/home_page/boards.html.twig
+++ b/templates/home_page/boards.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
+    {% block title %} Boards {% endblock %}
 {% block body %}
-    {% block title %} <h1>{{ users }} Boards </h1> {% endblock %}
-
+    <h1>{{ users }} Boards </h1>
     <a class="btn btn-primary" href="/create-board" role="button">Add new board</a>
     {% for message in app.flashes('success') %}
         <div class="alert alert-success">
