--- a/templates/new_board/new.html.twig
+++ b/templates/new_board/new.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% block title %} Create New Board {% endblock %}
 {% block body %}
     {% for message in app.flashes('success') %}
         <div class="alert alert-success">
