--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -16,12 +16,16 @@
     <table class="table table-striped table-bordered" style="width: 30%; margin: 0 auto;">
         <tr>
             <th scope="col" style="width: 20%;">No</th>
-            <th scope="col" style="width: 80%;">title</th>
+            <th scope="col" style="width: 70%;">title</th>
+            <th scope="col" colspan="2" style="width: 10%;">actions</th>
+
 
         </tr>
         {% for category in categories %}
             <td> {{ category.id }} </td>
             <td>{{ category.name }} </td>
+            <td><a href="/delete-category/{{ category.id }}"> delete</a></td>
+            <td><a href="/edit-category/{{ category.id }}"> edit</a></td>
             </tr>
         {% endfor %}
     </table>
